manifests/ingress/msfukui.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msfukui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "msfukui-letsencrypt-production"
spec:
  rules:
  - host: msfukui.page
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: msfukui-page-service
            port:
              number: 80
  tls:
  - hosts:
    - msfukui.page
    secretName: msfukui-ingress-tls
